Put info from task in and created mentioned files

--- a/cmake-build-ubuntu_prakbs21/PrakBS21.cbp
+++ b/cmake-build-ubuntu_prakbs21/PrakBS21.cbp
@@ -78,7 +78,19 @@
 				</MakeCommands>
 			</Target>
 		</Build>
+		<Unit filename="/root/tmp/PrakBS21/keyValStore.c">
+			<Option target="PrakBS21"/>
+		</Unit>
+		<Unit filename="/root/tmp/PrakBS21/keyValStore.h">
+			<Option target="PrakBS21"/>
+		</Unit>
 		<Unit filename="/root/tmp/PrakBS21/main.c">
+			<Option target="PrakBS21"/>
+		</Unit>
+		<Unit filename="/root/tmp/PrakBS21/sub.c">
+			<Option target="PrakBS21"/>
+		</Unit>
+		<Unit filename="/root/tmp/PrakBS21/sub.h">
 			<Option target="PrakBS21"/>
 		</Unit>
 		<Unit filename="/root/tmp/PrakBS21/CMakeLists.txt">
