--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(PrakBS21 C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(PrakBS21 main.c)
+add_executable(PrakBS21 main.c sub.c sub.h keyValStore.c keyValStore.h)
