--- a/cmake-build-ubuntu_prakbs21/Makefile
+++ b/cmake-build-ubuntu_prakbs21/Makefile
@@ -48,10 +48,10 @@ RM = /usr/bin/cmake -E remove -f
 EQUALS = =
 
 # The top-level source directory on which CMake was run.
-CMAKE_SOURCE_DIR = /root/tmp/PrakBS21
+CMAKE_SOURCE_DIR = /tmp/tmp.aaf28anzMV
 
 # The top-level build directory on which CMake was run.
-CMAKE_BINARY_DIR = /root/tmp/PrakBS21/cmake-build-ubuntu_prakbs21
+CMAKE_BINARY_DIR = /tmp/tmp.aaf28anzMV/cmake-build-ubuntu_prakbs21
 
 #=============================================================================
 # Targets provided globally by CMake.
@@ -80,9 +80,9 @@ edit_cache/fast: edit_cache
 
 # The main all target
 all: cmake_check_build_system
-	$(CMAKE_COMMAND) -E cmake_progress_start /root/tmp/PrakBS21/cmake-build-ubuntu_prakbs21/CMakeFiles /root/tmp/PrakBS21/cmake-build-ubuntu_prakbs21/CMakeFiles/progress.marks
+	$(CMAKE_COMMAND) -E cmake_progress_start /tmp/tmp.aaf28anzMV/cmake-build-ubuntu_prakbs21/CMakeFiles /tmp/tmp.aaf28anzMV/cmake-build-ubuntu_prakbs21/CMakeFiles/progress.marks
 	$(MAKE) -f CMakeFiles/Makefile2 all
-	$(CMAKE_COMMAND) -E cmake_progress_start /root/tmp/PrakBS21/cmake-build-ubuntu_prakbs21/CMakeFiles 0
+	$(CMAKE_COMMAND) -E cmake_progress_start /tmp/tmp.aaf28anzMV/cmake-build-ubuntu_prakbs21/CMakeFiles 0
 .PHONY : all
 
 # The main clean target
